kubernetes/admin-portal.yml
# admin-portal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-portal
spec:
  selector:
    matchLabels:
      app: admin-portal
  template:
    metadata:
      labels:
        app: admin-portal
    spec:
      containers:
      - name: admin-portal
        image: rag-widget-admin-portal:latest  # Local image
        imagePullPolicy: Never
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "Waiting for PostgreSQL to be fully initialized..."
            sleep 20
            node dist/app.js
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: gcp-key-volume
          mountPath: "/var/secrets/google"
          readOnly: true
      volumes:
      - name: gcp-key-volume
        secret:
          secretName: gcp-secrets
          items:
          - key: gcp-sa-key.json
            path: gcp-sa-key.json
---
apiVersion: v1
kind: Service
metadata:
  name: admin-portal
spec:
  type: LoadBalancer
  selector:
    app: admin-portal
  ports:
  - port: 3000
    targetPort: 3000
